# cbs-f-cardinal

./: .gitignore  CMakeLists.txt  Paris.sh  README.md  driver.cpp  run.bat
inc/: CBS.h  CBSHeuristic.h  CBSNode.h  Conflict.h  ConflictAvoidanceTable.h  ConstraintPropagation.h  ConstraintPropagationGeneralized.h  ConstraintTable.h  CorridorReasoning.h  HLHeuristic.h  HTable.h  ICBSNode.h  ICBSSearch.h  IncrementalPairwiseMutexPropagation.hpp  Instance.h  MDD.h  MutexReasoning.h  RectangleReasoning.h  ReservationTable.h  SIPP.h  SingleAgentICBS.h  SingleAgentSolver.h  SpaceTimeAStar.h  XytHolder.h  common.h  compute_heuristic.h  map_loader.h
src/: CBS.cpp  CBSHeuristic.cpp  CBSNode.cpp  CGHeuristic.cpp  Conflict.cpp  ConflictAvoidanceTable.cpp  ConstraintPropagation.cpp  ConstraintPropagationGeneralized.cpp  ConstraintTable.cpp  CorridorReasoning.cpp  DGHeuristic.cpp  HLHeuristic.cpp  ICBSNode.cpp  ICBSSearch.cpp  ILPforWMVC.cpp  IncrementalPairwiseMutexPropagation.cpp  Instance.cpp  MDD.cpp  MaxBC.cpp  MutexReasoning.cpp  RectangleReasoning.cpp  ReservationTable.cpp  SIPP.cpp  SapceTimeAStar.cpp  SingleAgentICBS.cpp  SingleAgentSolver.cpp  SpaceTimeAStar.cpp  WDGHeuristic.cpp  ZeroHeuristic.cpp  agents_loader.cpp  common.cpp  compute_heuristic.cpp  driver.cpp  map_loader.cpp
vs/: 10obs-20x20-20agents-CG-GR+C+T-disjoint.csv  10obs-20x20-20agents-CG-RM+C+T-disjoint.csv  10obs-20x20-30agents-CG-GR+C+T-disjoint.csv  10obs-20x20-30agents-CG-RM+C+T-disjoint.csv  10obs-20x20-40agents-CG-GR+C+T-disjoint.csv  10obs-20x20-40agents-CG-RM+C+T-disjoint.csv  10obs-20x20-50agents-CG-GR+C+T-disjoint.csv  10obs-20x20-50agents-CG-R+C+T-disjoint-SIPP.csv  10obs-20x20-50agents-CG-R+C+T-disjoint.csv  10obs-20x20-50agents-CG-RM+C+T-disjoint.csv  10obs-20x20-50agents-ICBS-disjoint-SIPP.csv  10obs-20x20-50agents-ICBS-disjoint.csv  10obs-20x20-60agents-CG-GR+C+T-disjoint.csv  10obs-20x20-60agents-CG-R+C+T-disjoint-SIPP.csv  (+13 more)
